poc/linear-flow01: Adjusting POMs